--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     <h2 id="sub_title" style="text-align:center;margin:0.8vh 0"></h2>
     <hr style="margin:1vw 5%;border:2px solid gray;margin-bottom:1vh">
     <p id="sub_content" style="height:3vh;color:blue;margin:1vw 0"></p>
-    <div id="sub_img" style="overflow: hidden;height:55vh"></div>
+    <div id="sub_img" style="overflow: auto;height:55vh"></div> <!-- overflow:hidden -->
     <p id="user_fill" style="height:3vh;position:absolute;bottom:6vh"></p>
   </div>
   <span id="display_closer" class="material-symbols-outlined" style="position:absolute;
